syntax = "proto3";

package storage.v1;

option go_package = "api/services/storage/v1;v1";

service StorageService {
	rpc Save(SaveRequest) returns (SaveResponse) {}
}

message SaveRequest {
	string name = 1;
	string data = 2;
}

message SaveResponse {
	string result = 1;
}